Fixed Issue #5317
- Footer in mobile devices has no border/margin and is not centered

--- a/css/footer/styles.less
+++ b/css/footer/styles.less
@@ -1,23 +1,22 @@
 body {
-	margin-bottom : 100px;
+    margin-bottom : 100px;
 }
-
 html {
-  position   : relative;
-  min-height : 100%;
+    position   : relative;
+    min-height : 100%;
 }
-
 #footer {
-  position         : absolute;
-  bottom           : 0;
-  width            : 100%;
-  min-height       : 70px;
-
-  .footer-img-region > img {
-  	max-width : 100%;
-  }
+    position   : absolute;
+    bottom     : 0;
+    width      : 100%;
+    min-height : 70px;
+    .footer-img-region {
+    	text-align : center;
+        img {
+            margin : 0 auto 1em !important;
+        }
+    }
 }
-
 #footer-copyright {
-	text-align : center;
+    text-align : center;
 }
